# whyyoulying

./: .gitignore  Cargo.toml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md
.github/workflows/: docs.yml
docs/: SWISS_ARMY_KNIFE_ENHANCEMENT.md  TRIPLE_SIMS_ARCH.md  TRIPLE_SIMS_STAT.md  TRIPLE_SIMS_WHYYOULYING.md  USER_STORY_ANALYSIS.md  book.toml  protocol_map.md
docs/src/: SUMMARY.md  introduction.md
docs/theme/: custom.css  force-theme.js  index.hbs
fixtures/: billing_records.json  labor_charges.json
planning/: TRIPLE_SIMS_ARCH.md  TRIPLE_SIMS_STAT.md  V0_2_PLAN.md
src/: config.rs  data.rs  lib.rs  main.rs  tests.rs  types.rs
src/detect/: duplicate_billing.rs  ghost.rs  labor.rs  mod.rs  overtime.rs  rate_inflation.rs
src/export/: mod.rs
tests/: integration.rs
